<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_fecha_actualizacion_app"
            android:id="@+id/txt_anio_actualizacion_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:id="@+id/txt_titulo_app"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_version_text"
            android:id="@+id/txt_version_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_version_coip"
            android:id="@+id/txt_version_coip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_imei"
            android:id="@+id/txt_imei"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_coordenadas"
            android:id="@+id/txt_coordenadas"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_latlon"
            android:id="@+id/txt_latlon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_by"
            android:id="@+id/txt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_anio"
            android:id="@+id/txt_anio_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_test_impresion"
            android:text="@string/text_test_impresion"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@drawable/xml_button_background"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update"
            android:text="@string/str_update_app"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@drawable/xml_button_background"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>
