<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/tool_bar"/>

        <ScrollView
            android:id="@+id/scroll_consultation_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="50dp"
                                >

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <EditText
                                        android:id="@+id/txt_placa"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="2dp"
                                        android:layout_marginLeft="2dp"
                                        android:textSize="22sp"
                                        android:hint="@string/str_licencia_placa"
                                        android:inputType="textNoSuggestions"
                                        android:imeOptions="actionDone"/>
                                </com.google.android.material.textfield.TextInputLayout>

                                <TextView
                                    android:id="@+id/txt_descripcion_vehiculo"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:textSize="14sp"
                                    android:textColor="@android:color/black" />

                            </LinearLayout>
                            <ImageView
                                android:id="@+id/img_consultar_placa"
                                android:layout_centerVertical="true"
                                android:layout_margin="2dp"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/img_icon_send1"
                                android:adjustViewBounds="true"
                                android:background="@drawable/xml_button_background_send"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <CheckBox
                                android:id="@+id/ckb_coip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:textSize="15sp"
                                android:textColor="@color/secondary_text"
                                android:text="Coip          " />

                            <CheckBox
                                android:id="@+id/ckb_ordenanza"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:textSize="15sp"
                                android:textColor="@color/secondary_text"
                                android:text="Ordenanza" />

                            <CheckBox
                                android:id="@+id/ckb_resolucion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:textSize="15sp"
                                android:textColor="@color/secondary_text"
                                android:text="Resolución" />

                        </LinearLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <AutoCompleteTextView
                                android:id="@+id/txt_buscar_infraccion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Buscar Infracción"
                                android:textSize="16sp"
                                android:inputType="textNoSuggestions"
                                android:maxLines="2"
                                android:imeOptions="actionNext" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <LinearLayout
                            android:id="@+id/ll_add_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/txt_lugar_ocurencia"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:hint="@string/str_lugar_ocurrencia"
                                    android:inputType="text"
                                    android:maxLength="100"
                                    android:imeOptions="actionNext"
                                    />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/txt_observacion"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/str_observacion"
                                    android:textSize="16sp"
                                    android:inputType="text"
                                    android:maxLength="200"
                                    android:imeOptions="actionDone"/>
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:id="@+id/img_foto_infraccion"
                        android:src="@drawable/img_background_photo"
                        android:background="@drawable/xml_image_background"
                        android:layout_marginRight="8dp"
                        android:adjustViewBounds="true"
                        />
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:id="@+id/img_foto_infraccion2"
                        android:layout_below="@+id/title_Foto"
                        android:layout_marginLeft="8dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/xml_image_background"
                        android:src="@drawable/img_background_photo"
                        />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/expanded_menuInfraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="320dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        app:fab_addButtonColorNormal="@color/blue"
        app:fab_addButtonPlusIconColor="#ffffff"
        app:fab_addButtonSize="normal"
        app:fab_expandDirection="up"
        android:layout_gravity="end|bottom|right">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/blue"
            app:fab_colorPressed="@color/light_blue"
            app:fab_icon="@drawable/ic_action_camera"
            app:fab_size="mini" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendPrinter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/blue"
            app:fab_colorPressed="@color/light_blue"
            app:fab_icon="@drawable/ic_action_printer"
            app:fab_size="mini"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
